[package]
name = "potlock-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
inindexer = { git = "https://github.com/INTEARnear/inindexer.git", features = [ "fastnear-data-server" ] }
async-trait = "0.1.80"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
simple_logger = "5.0.0"
redis = { version = "0.25.3", features = [ "tokio-rustls-comp", "connection-manager" ], optional = true }
serde = { version = "1.0.199", features = [ "derive" ] }
serde_json = "1.0.116"
dotenv = "0.15.0"
anyhow = "1.0.82"

[features]
redis-handler = [ "redis" ]
default = [ "redis-handler" ]
